add calendar and user info pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="btn">Арендовать</div>
     </a> -->
 
-<div id="860164" class="popup_block popup_meetingroom popup_block__white-background " attr-price="1100" attr-low-price="800" attr-loc="Охта" attr-cap="Переговорная №1-1 на 5 мест" attr-adress="Санкт-Петербург, Малоохтинский пр., 68">
+<div id="860164" class="popup_block popup_meetingroom meetingroom_seat-choice popup_block__white-background " attr-price="1100" attr-low-price="800" attr-loc="Охта" attr-cap="Переговорная №1-1 на 5 мест" attr-adress="Санкт-Петербург, Малоохтинский пр., 68">
     <div id="close_form">
         <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M9.6 28.5L7.5 26.4L15.9 18L7.5 9.6L9.6 7.5L18 15.9L26.4 7.5L28.5 9.6L20.1 18L28.5 26.4L26.4 28.5L18 20.1L9.6 28.5Z" fill="black"/>
@@ -265,7 +265,7 @@
                 <div class="mr_d_u"></div>
             </div>
         </div>
-        <div class="rent-summary" id="rs_860164">
+        <div class="booking-summary" id="rs_860164">
             <div>
                 <b>Дата</b> <span id="rs-date_860164">10.08.2023 г</span>
             </div>
